examples/pos/capture/forcing.effekt
type NumberThunk = () => Int at {}
def force(t: NumberThunk): Int = t()
def init(n: Int): NumberThunk = box { n }
def test(): NumberThunk = box {
  val num: Int = (init(42))()
  num
}

def main() = println(test()())
