examples/neg/issue1191.effekt
def bar() = {
  type Foo {
    F(block: () => Foo at {})
  }
}